* [android] disable verify in unit test build